# Gorizont-Engine

./: .gitignore
LINUX_Project/: CMakeLists.txt  Gorizont  Gorizont-Engine  Gorizont.pro  Makefile  MakefileWindows
LINUX_Project/build_cmake/: CMakeCache.txt  Gorizont-Engine  Makefile  cmake_install.cmake
LINUX_Project/build_cmake/Gorizont-Engine_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
LINUX_Project/build_cmake/Gorizont-Engine_autogen/K6S233IZAZ/: moc_GameWindow.cpp  moc_GameWindow.cpp.d  moc_MainMenuWindow.cpp  moc_MainMenuWindow.cpp.d
LINUX_Project/headers/: Camera.hpp  Entity.hpp  GameWindow.hpp  MainMenuWindow.hpp  Object2D.hpp  ObjectType.hpp  Player.hpp  Point2D.hpp  Polygon2D.hpp  SettingsWindow.hpp  World.hpp  settings.hpp
LINUX_Project/maps/: map1.xml  map2.xml
LINUX_Project/moc/: GameWindow.moc.cpp  MainMenuWindow.moc.cpp
LINUX_Project/qt_local/include/QtCore/: qconfig.h  qglobal.h  qprocessordetection.h  qstring.h
LINUX_Project/qt_local/include/QtCore/5.15.17/QtCore/private/: minimum-linux_p.h  qconfig_p.h  qtcore-config_p.h
LINUX_Project/qt_local/include/QtGui/5.15.17/QtGui/private/: qtgui-config_p.h
LINUX_Project/qt_local/include/QtInputSupport/5.15.17/QtInputSupport/private/: qxkbcommon_p.h
LINUX_Project/qt_local/lib/mkspecs/: qconfig.pri  qdevice.pri  qmodule.pri
LINUX_Project/qt_local/lib/mkspecs/common/: gcc-base.conf
LINUX_Project/qt_local/lib/mkspecs/features/data/cmake/: Qt5BasicConfig.cmake.in
LINUX_Project/qt_local/lib/mkspecs/modules/: qt_lib_core_private.pri  qt_lib_eglfs_kms_support_private.pri  qt_lib_gui.pri  qt_lib_gui_private.pri  qt_lib_input_support_private.pri  qt_lib_kms_support_private.pri  qt_lib_network.pri  qt_lib_network_private.pri  qt_lib_widgets_private.pri  qt_lib_xcb_qpa_lib_private.pri
LINUX_Project/qt_local/lib/qml/QtQuick/Controls/: ApplicationWindow.qmlc  BusyIndicator.qmlc  Button.qmlc  Calendar.qmlc  CheckBox.qmlc  ComboBox.qmlc  GroupBox.qmlc  Label.qmlc  Menu.qmlc  MenuBar.qmlc  ProgressBar.qmlc  RadioButton.qmlc  ScrollView.qmlc  Slider.qmlc  SpinBox.qmlc  SplitView.qmlc  StackView.qmlc  StackViewDelegate.qmlc  StackViewTransition.qmlc  StatusBar.qmlc  Switch.qmlc  Tab.qmlc  TabView.qmlc  TableView.qmlc  TableViewColumn.qmlc  TextArea.qmlc  TextField.qmlc  ToolBar.qmlc  ToolButton.qmlc  TreeView.qmlc
LINUX_Project/qt_local/lib/qml/QtQuick/Controls/Private/: AbstractCheckable.qmlc  BasicButton.qmlc  BasicTableView.qmlc  (+31 more)
LINUX_Project/qt_local/lib/qml/QtQuick/Dialogs/: DefaultColorDialog.qmlc  DefaultDialogWrapper.qmlc  DefaultFileDialog.qmlc  DefaultFontDialog.qmlc  DefaultMessageDialog.qmlc  WidgetColorDialog.qmlc  WidgetFileDialog.qmlc  WidgetFontDialog.qmlc  WidgetMessageDialog.qmlc
LINUX_Project/qt_local/lib/qml/QtQuick/Extras/: CircularGauge.qmlc  DelayButton.qmlc  Dial.qmlc  Gauge.qmlc  PieMenu.qmlc  StatusIndicator.qmlc  ToggleButton.qmlc  Tumbler.qmlc  TumblerColumn.qmlc
LINUX_Project/src/: Camera.cpp  Circle.cpp  Entity.cpp  Map.cpp  Object2D.cpp  Player.cpp  Polygon2D.cpp  Wall.cpp  World.cpp  main.cpp
LINUX_Project/src/ui/: GameWindow.cpp  MainMenuWindow.cpp  SettingsWindow.cpp
(+155 files in other folders)
